# king-pepe-source-code

./: .cirrus.yml  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Makefile.am  Makefile.in  OPERATOR_UPGRADE_GUIDE.md  README.md  SECURITY.md  aclocal.m4  configure  configure.ac  libbitcoinkernel.pc.in  libkingpepeconsensus.pc.in
.github/: PULL_REQUEST_TEMPLATE.md  ci-windows-cross.py  ci-windows.py
.tx/: config
autom4te.cache/: output.2  output.3  requests  traces.0  traces.2  traces.3
build_msvc/: .gitignore  README.md  kingpepe.sln  kingpepe_config.h.in  libsecp256k1_config.h  msvc-autogen.py  vcpkg.json
ci/: lint.py
contrib/: README.md  valgrind.supp
depends/: README.md  description.md  packages.md
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  bitcoin-conf.md  build-android.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  cjdns.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  external-signer.md  files.md  fuzzing.md  guix.md  i2p.md  init.md  kingpepe-conf.md  managing-wallets.md  multisig-tutorial.md  offline-signing-tutorial.md  p2p-bad-ports.md  productivity.md  psbt.md  reduce-memory.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  (+5 more)
doc/man/: Makefile.am  Makefile.in  kingpepe-cli.1  kingpepe-qt.1  kingpepe-tx.1  kingpepe-util.1  kingpepe-wallet.1  kingpepe.1  kingpeped.1
src/test/kernel/: CMakeLists.txt  test_kernel.cpp
(+1281 files in other folders)
