dist_man1_MANS=

if BUILD_KINGPEPED
  dist_man1_MANS+=kingpeped.1
endif

if ENABLE_QT
  dist_man1_MANS+=kingpepe-qt.1
endif

if BUILD_KINGPEPE_CLI
  dist_man1_MANS+=kingpepe-cli.1
endif

if BUILD_KINGPEPE_TX
  dist_man1_MANS+=kingpepe-tx.1
endif

if BUILD_KINGPEPE_UTIL
  dist_man1_MANS+=kingpepe-util.1
endif

if ENABLE_WALLET
if BUILD_KINGPEPE_WALLET
  dist_man1_MANS+=kingpepe-wallet.1
endif
endif
